--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
+@import "~@angular/material/theming";
+@include mat-core();
+
+$my-primary: mat-palette($mat-blue, 600, 200, 100);
+$my-accent: mat-palette($mat-amber, A200, A100, A400);
+$my-warn: mat-palette($mat-deep-orange);
+
+$my-2-primary: mat-palette($mat-pink, 400, 200, 600);
+$my-2-accent: mat-palette($mat-blue, A200, A100, A400);
+$my-2-warn: mat-palette($mat-deep-orange, 500, 300, 700);
+
+.dark-theme {
+  $my-theme-dark: mat-dark-theme($my-primary, $my-accent, $my-warn);
+  @include angular-material-theme($my-theme-dark);
+  $primary: mat-color($my-primary);
+  $accent: mat-color($my-accent);
+  $warn: mat-color($my-warn);
+  $fg_palette:map-get($my-theme-dark, foreground);
+  $bg_palette:map-get($my-theme-dark, background);
+  $fg:map-get($fg_palette, text);
+  $bg:map-get($bg_palette, background);
+
+  --primary: #{$primary};
+  --accent: #{$accent};
+  --warn: #{$warn};
+  --fg: #{$fg};
+  --bg: #{$bg};
+}
+
+.dark-theme-2 {
+  $my-2-theme-dark: mat-dark-theme($my-2-primary, $my-2-accent, $my-2-warn);
+  @include angular-material-theme($my-2-theme-dark);
+  $primary: mat-color($my-2-primary);
+  $accent: mat-color($my-2-accent);
+  $warn: mat-color($my-2-warn);
+  $fg_palette:map-get($my-2-theme-dark, foreground);
+  $bg_palette:map-get($my-2-theme-dark, background);
+  $fg:map-get($fg_palette, text);
+  $bg:map-get($bg_palette, background);
+
+  --primary: #{$primary};
+  --accent: #{$accent};
+  --warn: #{$warn};
+  --fg: #{$fg};
+  --bg: #{$bg};
+}
+
+html, body {
+  height: 100%;
+  background-color: var(--bg);
+}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
