--- a/src/app/components/chat-container/chat-container.component.html
+++ b/src/app/components/chat-container/chat-container.component.html
@@ -1,4 +1,4 @@
 <chat-header [sender]="chatTarget"></chat-header>
-<chat-message *ngFor="let msg of messages ; trackBy: trackMessages" [message]="msg"></chat-message>
-<div style="padding: 2rem;" scrollLock tagName="chat-message" [snapEvent]="updateObs"></div>
+<chat-message *ngFor="let msg of messages ; trackBy: trackMessages" style="display: block;" [message]="msg"></chat-message>
+<div style="padding: 0.1rem; margin-bottom: 3rem;" scrollLock tagName="chat-message" [snapEvent]="updateObs"></div>
 <chat-footer class="footer-container"></chat-footer>
